# Hackathon

./: .gitignore  CLAUDE.md  README.md  docusaurus.config.js  fix_all.py  package-lock.json  package.json  sidebars.js
.github/workflows/: deploy.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
docs/appendices/: glossary.mdx  hardware-specifications.mdx  index.mdx  resources.mdx
docs/course-introduction/: index.mdx  learning-outcomes.mdx  weekly-breakdown.mdx  why-physical-ai-matters.mdx
docs/intro/: index.mdx
docs/module-1-robotic-nervous-system/: building-ros2-nodes-python.mdx  creating-publishers-subscribers.mdx  describing-humanoid-robots-with-urdf.mdx  foundations-of-ros2-architecture.mdx  implementing-services-actions.mdx  index.mdx  introduction-to-ros2-architecture.mdx  package-building-tutorial.mdx
docs/module-2-digital-twin/: gazebo-simulation.mdx  index.mdx  introduction-to-digital-twins.mdx  mastering-gazebo-simulation.mdx  unity-integration.mdx
docs/module-3-ai-robot-brain/: advanced-perception.mdx  index.mdx  overview-of-nvidia-isaac.mdx  perception-systems.mdx
docs/module-4-vision-language-action/: advanced-vla-applications.mdx  cognitive-planning.mdx  end-to-end-vla-control.mdx  index.mdx  voice-to-action.mdx
examples/ros2_packages/urdf_example/: package.xml  setup.cfg  setup.py
examples/ros2_packages/urdf_example/launch/: robot_visualization.launch.py
examples/ros2_packages/urdf_example/urdf/: simple_humanoid.urdf
specs/001-digital-twin-gazebo-unity/: data-model.md  (+5 more)
(+115 files in other folders)
